<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zhw_jaka_wrapper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fdse-arm@todo.todo">fdse-arm</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <depend>zhw_msgs</depend>
  <depend>robot_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>zhw_jaka_bridge</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
